feat: rota para buscar todas as notificações de um cidadão
